Got The HomePage Showing Some Good Shit

--- a/photo_frontend/src/App.css
+++ b/photo_frontend/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,11 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.mainContainer{
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
 }
+
