--- a/photo_frontend/src/Components/HomePage/HomePage.css
+++ b/photo_frontend/src/Components/HomePage/HomePage.css
@@ -1,23 +1,3 @@
-/* Reference from the buger app from udemy */
-
-/* .BuildControls{
-    width: 100%;
-    background-color: #CF8F2E;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    box-shadow: 0 2px 1px #CCC;
-    margin: auto;
-    padding: 10px 0;
-}
-.Logo{
-    background-color: white;
-    padding: 8px;
-    height: 100%;
-    box-sizing: border-box;
-    border-radius: 5px;
-} */
-
 /* Real/Test work here */
 
  .mystyle  {
@@ -26,6 +6,7 @@
     font-family: Arial, Helvetica, sans-serif;
     height: 500px;
     width: 130px;
+    
     /* left: 00px; */
   };
 
@@ -34,13 +15,6 @@
         width: '130%';
         background-color: 'powderblue' 
 }; */
-
-
-
-
-/* .homePageTitleBoarder{
-    
-} */
 
   /* raul  */
 
@@ -83,7 +57,11 @@
         background-repeat: no-repeat;
         background-size: cover;
         font-style: italic;
-        
+    }
+    .headerDetail{
+    background: white;
+    border: 10px solid rgba(0, 0, 0, 0.3);
+    background-clip: content-box;
     }
 
     /* .fixedContainer {
