--- a/photo_frontend/src/Components/HomePage/HomePage.css
+++ b/photo_frontend/src/Components/HomePage/HomePage.css
@@ -1,26 +1,11 @@
 /* Real/Test work here */
 
- .mystyle  {
-    color: white;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+ .welcomeSquare{
     height: 500px;
     width: 720px;
-    border-style: double;
-    text-align: center;
-    object-fit: fill;
-    /* left: 00px; */
+    
   };
 
-  .innerBoarder{
-    color: black;
-  }
-
-/* .test{
-        height: '500px';
-        width: '130%';
-        background-color: 'powderblue' 
-}; */
 
   /* raul  */
 
@@ -54,9 +39,6 @@
 
       .header{
         background-image: url('https://shelbycountyartscouncil.com/wp-content/uploads/2017/09/pexels-photo-226243.jpeg');
-        /* background-color:  #44A7C5; */
-        /* height: 20vh;
-        width: auto; */
         padding: 50px;
         text-align: center;
         background-position: center;
@@ -70,11 +52,84 @@
     background-clip: content-box;
     }
 
-    /* .fixedContainer {
-        background-color:#ddd;
-        position: fixed;
-        padding: 2em;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-    } */
+    
+   
+
+    .innerBorder{
+      background-color: rgb(0,0,0); /*Fallback color */
+      background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+      color: white;
+      font-weight: bold;
+      border: 3px solid #f1f1f1;
+      border-style: double;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      width: 80%;
+      padding: 20px;
+      text-align: center;
+  }
+ .bg-image{
+      background-image: url('https://cdn.hipwallpaper.com/i/45/8/GUzJX8.jpg');
+      filter: blur(8px);
+      -webkit-filter: blur(8px);
+      height: 100%; 
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      object-fit: fill;
+    }
+  .bg-image2{
+    background-image: url('https://www.adorama.com/alc/wp-content/uploads/2014/02/shutterstock_201122333-825x465@2x.jpg');
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+        object-fit: fill;
+
+  }
+
+  .loginSquare{
+    font-family: Arial, Helvetica, sans-serif;
+    height: 700px;
+    width: 720px;
+  }
+
+  .innerBorder2{
+      background-color: rgb(0,0,0); /*Fallback color */
+      background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+      color: white;
+      font-weight: bold;
+      border: 3px solid #f1f1f1;
+      border-style: double;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      width: 80%;
+      padding: 20px;
+      text-align: center;
+  }
+
+  
+  
+
+     /* color: white; */
+    /* padding: 10px; */
+    /* font-family: Arial, Helvetica, sans-serif; */
+    /* border-style: double; */
+    /* border-width: 5px; */
+    /* object-fit: fill; */
+    /* background-image: url('http://static.trip101.com/paragraph_media/pictures/001/767/562/large/houston-1620802_1920.jpg?1577175466');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    /* text-align: center; */
+    /* filter: blur(8px);
+    -webkit-filter: blur(8px); */
+    /* left: 00px; */
