--- a/photo_frontend/src/Components/AppointmentDashboard/AppointmentDashboard.css
+++ b/photo_frontend/src/Components/AppointmentDashboard/AppointmentDashboard.css
@@ -1,25 +1,25 @@
 .AppointTitle{
-    background-image: url('https://www.amle.org/Portals/0/EasyGalleryImages/1/776/Merenbloom_pic.jpg');
-    /* background-color:  #44A7C5; */
-    /* height: 20vh;
-    width: auto; */
+    background-image: url('https://www.amle.org/Portals/0/EasyGalleryImages/1/776/Merenbloom_pic.jpg'); 
     padding: 50px;
     text-align: center;
     background-position: center;
     background-repeat: no-repeat;
-    /* background-size: auto; */
     background-size: cover;
-    /* background-size: 90% 90%; */
-   
     font-style: italic;
 }
 .titleStyle{
-    /* border: double; */
-    /* border-right: 1px solid rgba(0,0,0,0.12); */
-    /* background-clip: padding-box; */
     background: white;
     border: 20px solid rgba(0, 0, 0, 0.3);
-    background-clip: content-box; }
+    background-clip: content-box; 
+}
+
 .AppointInfo{
     text-align: center;
+}
+
+.buttons{
+    /* background-color: blue; */
+    background-image: url('https://cdn3.iconfinder.com/data/icons/smartphone-essentials-part-2/24/All_Icons-40-512.png');
+    background-position: center;
+    border: 5px;
 }
