--- a/photo_frontend/src/Components/Display/Display.css
+++ b/photo_frontend/src/Components/Display/Display.css
@@ -1,7 +1,15 @@
 .appointCard{
   border-style: double;
   border-width: 5px;
+  background-image: url('https://www.brol.com/wp-content/uploads/2018/08/photogprahy1.jpg');
+  text-align: center;
+  background-position: center;
+  color: white;
   /* position: absolute;
   top: 80px;
   right: 0; */
 }
+
+/* .backgroundPic{
+  background-image: 'https://images.unsplash.com/photo-1556103255-4443dbae8e5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80';
+} */
