--- a/photo_frontend/src/Components/AppointmentDashboard/AppointmentDashboard.css
+++ b/photo_frontend/src/Components/AppointmentDashboard/AppointmentDashboard.css
@@ -17,9 +17,20 @@
     text-align: center;
 }
 
-.buttons{
-    /* background-color: blue; */
+.buttonContainer{
+    display: grid;
+    grid-column-gap: 10px;
+    /* grid-template-columns: auto auto; */
+    grid-gap: 10px;
+    padding: 10px;
+    /* background-color: brown; */
+    border-radius: 25px; 
     background-image: url('https://cdn3.iconfinder.com/data/icons/smartphone-essentials-part-2/24/All_Icons-40-512.png');
     background-position: center;
     border: 5px;
+  }
+
+.buttons{
+    background-color: blue;
+    /* border: 5px; */
 }
