fixed gem posgreSQL issues as well as some clean code

--- a/photo_frontend/src/Components/AppointmentDashboard/AppointmentDashboard.css
+++ b/photo_frontend/src/Components/AppointmentDashboard/AppointmentDashboard.css
@@ -1,5 +1,5 @@
 .AppointTitle{
-    background-image: url('https://www.amle.org/Portals/0/EasyGalleryImages/1/776/Merenbloom_pic.jpg'); 
+    background-image: url('https://shelbycountyartscouncil.com/wp-content/uploads/2017/09/pexels-photo-226243.jpeg'); 
     padding: 50px;
     text-align: center;
     background-position: center;
